--- a/app/src/main/res/layout/activity_f1_section02.xml
+++ b/app/src/main/res/layout/activity_f1_section02.xml
@@ -330,7 +330,7 @@
                     android:id="@+id/btnNext"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_margin="4dp"
+                    android:layout_margin="4sp"
                     android:layout_weight="1"
                     android:background="@android:color/holo_green_light"
                     android:onClick="@{() -> callback.BtnContinue()}"
@@ -343,7 +343,7 @@
                     android:id="@+id/btnEnd"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_margin="4dp"
+                    android:layout_margin="4sp"
                     android:layout_weight="1"
                     android:background="@android:color/holo_red_light"
                     android:onClick="@{() -> callback.BtnEnd()}"
