--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,13 @@
         android:paddingTop="72dp"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
+        android:background="@drawable/rsv_bg"
         tools:context="edu.aku.hassannaqvi.rsvstudy.ui.other.MainActivity">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+
             android:orientation="vertical">
             <!-- Login progress -->
             <TextView
