--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/maxresdefault"
+    android:background="@drawable/rsv_splash"
     tools:context="edu.aku.hassannaqvi.rsvstudy.ui.other.SplashscreenActivity">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
