--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="colorPrimaryDark">#005662</color>
+    <color name="colorPrimaryDark">#1A0B24</color>
     <!--<color name="colorPrimary">#880E4F</color>-->
-    <color name="colorPrimary">#00838f</color>
-    <color name="colorPrimaryAlpha">#6e8b6f</color>
+    <color name="colorPrimary">#451e5d</color>
+    <color name="colorPrimaryAlpha">#d6451e5d</color>
     <color name="colorPrimaryBeta">#5c6bc0</color>
     <color name="colorPrimaryGamma">#99a3ff</color>
-    <color name="colorAccent">#4fb3bf</color>
+    <color name="colorAccent">#dcb46f</color>
     <color name="pink_100">#ccefd3</color>
-    <color name="colorHeading">#CDDC39</color>
+    <color name="colorHeading">#00617d</color>
+    <color name="colorHeadingText">#dcb46f</color>
 
     <color name="black">#000000</color>
     <color name="blackOverlay">#66000000</color>
